--- a/app/src/main/res/layout/fragment_onboarding_verify.xml
+++ b/app/src/main/res/layout/fragment_onboarding_verify.xml
@@ -1,23 +1,33 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.syzible.boop.activities.OnboardingActivity">
 
-    <TextView
-        android:text="Verify"
-        android:id="@+id/section_label"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_centerInParent="true">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/verify_section_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Verify Number"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/onboarding_verify_code_input"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/verify_section_label"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:hint="01234"
+            android:padding="16dp" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
