--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="white">#FFFFFF</color>
 
     <color name="grey200">#EEEEEE</color>
-    <color name="grey500">#9E9E9E</color>
+    <color name="grey400">#BDBDBD</color>
 
     <!-- onboarding colours -->
     <color name="blue500">#03A9F4</color>
