updated skeleton to include some web calls to a temp server as well as updated localprefs helpers and fragments

--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -29,6 +29,7 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/contacts_header_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/contacts_header_title"
