--- a/app/src/main/res/layout/fragment_onboarding_about.xml
+++ b/app/src/main/res/layout/fragment_onboarding_about.xml
@@ -1,8 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.syzible.boop.activities.OnboardingActivity">
 
     <RelativeLayout
@@ -11,21 +13,22 @@
         android:layout_centerInParent="true">
 
         <TextView
-            android:id="@+id/verify_section_label"
+            android:id="@+id/section_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Verification Number"
-            android:textColor="@color/white"
-            android:textSize="24sp" />
-
-        <EditText
-            android:id="@+id/onboarding_verify_code_input"
-            android:layout_width="128dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/verify_section_label"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:hint="01234"
-            android:layout_margin="16dp" />
+            android:text="Be Boopiful"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/section_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/section_label"
+            android:layout_centerHorizontal="true"
+            android:text="Be Boopiful"
+            android:textColor="@color/white" />
     </RelativeLayout>
+
 </RelativeLayout>
